Integrated with Google Cloud Run

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,24 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/documentation:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/frontend-documentation', '.']
   # Push the container image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/documentation:$COMMIT_SHA']
-  # Deploy container image to Cloud Run
+    args: ['push', 'gcr.io/$PROJECT_ID/frontend-documentation']
+  
+  # Deploy container image to Cloud Run (Region: europe-west1)
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
     - 'run'
     - 'deploy'
-    - 'documentation'
+    - 'frontend-documentation-europe'
     - '--image'
-    - 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/documentation:$COMMIT_SHA'
+    - 'gcr.io/$PROJECT_ID/frontend-documentation'
     - '--region'
-    - 'europe-west4'
+    - 'europe-west1'
     - '--platform'
     - 'managed'
     - '--allow-unauthenticated'
+
 images:
-  - 'europe-west4-docker.pkg.dev/$PROJECT_ID/images/documentation:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/frontend-documentation'
